--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     // 行末尾不使用分号
     "semi": 0,
     "space-before-function-paren": 0,
-    "spaced-comment": 2
+    "spaced-comment": 2,
+    "react/jsx-space-before-closing": 2
   }
 }
