--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,8 @@
     "semi": 0,
     "space-before-function-paren": 0,
     "spaced-comment": 2,
-    "react/jsx-space-before-closing": 2
+    "react/jsx-space-before-closing": 2,
+    "react/prop-types": 0,
+    "no-console": 0
   }
 }
